--- a/pages/markdown.page.mdx
+++ b/pages/markdown.page.mdx
@@ -1,15 +1,9 @@
-import { Article } from './_components/article';
+import { Article } from './components/article';
 
 <Article>
 
-# Test Artikel
+# Rust 404
 
-Das hier ist ein Test Artikel mit ein paar **markdown** Elementen und _anderen_ sachen
-
-Das hier ist eine Liste:
-
-1. Artikel
-2. Bestand
-3. Hallo
+This writeup is concerned with the creation of our missing page
 
 </Article>
