Add simple texture loading

--- a/pages/markdown.page.mdx
+++ b/pages/markdown.page.mdx
@@ -4,6 +4,6 @@ import { Article } from './components/article';
 
 # Rust 404
 
-This writeup is concerned with the creation of our missing page
+This writeup is concerned with the creation of our missing page **bold**
 
 </Article>
