Some stuff that i did

--- a/pages/markdown.page.mdx
+++ b/pages/markdown.page.mdx
@@ -24,11 +24,16 @@ pub fn render<'a>(&'a self, task: &mut RenderTask<'a>) {
 }
 ```
 
-And another math block
-Lift($L$) can be determined by Lift Coefficient ($C_L$) like the following equation.
+And another math block $\frac{1}{2} = 17$, is it about the $\sqrt{2}$
 
 $$
-L = \frac{1}{2} \rho v^2 S C_L
+    \color{blue} \sqrt[3]{2} = (xy + x + y)^2 = \frac{203}{223}
 $$
+
+$$
+    A = \{i^2; i \in \N \}
+$$
+
+And some more text below that
 
 </Article>
